# Simulator

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.githooks/: pre-commit
docs/: activity.puml  class.puml  docstring_templates.md
docs/object_diagrams/: node_blueprint.puml
scripts/: run.py  update_coverage_badge.py  view.py
src/engine/: simulation.py
src/engine/engine_pieces/: Properties.py  Run.py  Saver.py  Summary.py  __init__.py
src/engine/utils/: citizens_utils.py
src/logger/: logger.py
src/save/: __init__.py
src/simulator/: __init__.py
src/simulator/adapters/: __init__.py  config_loader.py  downloader.py  loader.py  repository.py  simulation_io.py  source.py
src/simulator/components/: citizen.py
src/simulator/domain/: __init__.py  connectivity_matrix.py  node.py  simulation_engine.py  simulation_run.py  simulation_state.py
src/simulator/engine/: Simulation.py  history.py
src/simulator/hyperparameters/: __init__.py  states.py  visualizing.py
src/simulator/logger/: formaters.py
src/simulator/plots/: plot_summary.py  plot_utils.py  plots.py
src/simulator/service/: simulation.py  simulation_run.py  visualizer.py
src/simulator/styling/: __init__.py  font_initializer.py  graphics_utils.py  show_style.py
src/simulator/time/: SimTime.py  __init__.py  time_converter.py
src/styling/: portugal_style.mplstyle
tests/: conftest.py
tests/helpers/: assertions.py  builders.py  fakes.py
tests/integration/adapters/: conftest.py  test_config_loader.py  test_downloader.py  test_downloader_loader_roundtrip.py  (+2 more)
(+101 files in other folders)
